examples/errors/duplicate_class_method2.ik
type Sized class:
    fn size(Self) Int
    fn size(Self) Bool

fn main():
    print("Hello\n")
